--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,8 @@ h1 {
   line-height: 0.85;
 }
 
-p {
+p,
+blockquote {
   color: var(--clr-magenta-neutral);
   line-height: 1.3;
   font-weight: 500;
