--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,10 @@ Font Styles
 h1 {
   color: var(--clr-magenta-dark);
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 3.125rem;
 
   line-height: 0.85;
+  letter-spacing: -0.063rem;
 }
 
 p,
